# email-validator

./: .gitignore  PRD.md  README.md  pyproject.toml  requirements.txt  validate.py
api/: main.py
email_validator/: __init__.py  batch.py  cli.py  disposable.py  dns_check.py  smtp_check.py  syntax.py
email_validator/data/: disposable_domains.txt
frontend/: package-lock.json
frontend/src/: App.tsx  index.css
frontend/src/components/: Badge.tsx  Layout.module.css  Layout.tsx  ScoreBar.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: ApiDocs.module.css  Dashboard.tsx  History.module.css
src/: App.css
src/components/: Badge.module.css  ScoreBar.module.css  Spinner.tsx
src/lib/: api.ts
src/pages/: ApiDocs.tsx  BulkValidate.module.css  BulkValidate.tsx  Dashboard.module.css  History.tsx  SingleValidate.module.css  SingleValidate.tsx
supabase/functions/validate/: index.ts
tests/: test_batch.py  test_dns_check.py  test_smtp_check.py
